--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,5 +278,9 @@ footer {
         font-size: 5vw;
 
     }
-
+    a {
+        text-decoration: none;
+        color: black;
+        padding: 30px;
+        background-color: white;
 }
